[workspace]
members = ["lib", "cli", "gui"]
default-members = ["gui"]

[workspace.package]
edition = "2021"
version = "0.3.2"
authors = ["George Poulios"]
description = "A utility to control Razer DeathAdder v2 on Windows"
readme = "./README.md"
repository = "https://github.com/gpoulios/deathadderv2"
license = "GPLv3"

[workspace.dependencies]
rgb = { version = "0.8.36" }
rusb = { version = "0.9" }
