[package]
name = "deathadder-rgb-cli"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[[bin]]
name = "deathadder-rgb-cli"
path = "src/cli.rs"

[dependencies]
librazer = { path = "../lib" }
rgb = { workspace = true }