[package]
name = "deathadder-rgb-gui"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[[bin]]
name = "deathadder-rgb-gui"
path = "src/gui.rs"

[dependencies]
librazer = { path = "../lib" }
winapi = "0.3.9"
rgb = { workspace = true }

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug"
]