[package]
name = "deathadder-rgb-gui"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[[bin]]
name = "deathadder-rgb-gui"
path = "src/gui.rs"

[dependencies]
librazer = { path = "../lib" }
rgb = { workspace = true }
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"

[dependencies.windows]
version = "0.46.0"
features = [
    "Win32_Foundation",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug"
]