[package]
name = "librazer"
description = "A partial port of openrazer's driver for DeathAdder v2"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
rusb = "0.9"
serde = { version = "1.0.152", features = ["derive"] }
rgb = { workspace = true, features = ["serde"] }
confy = "0.5.1"